$Id: History,v 1.16 2000-11-20 15:39:53 gcosmo Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

Nov 20 2000, G.Cosmo (event-V02-00-04)
- Removed data-logs from test directory.

Nov 13 2000, M.Asai (event-V02-00-03)

Nov 10 2000, F.Lei
- Adding src and include sub-directory and files to test/GeneralParticleSource
- Improving the speed in  G4GeneralParticleSource::GenerateIsotropicFlux() and
   G4GeneralParticleSource::GenerateCoslawFlux()
-    some bug fixing:
          i) dclared ' G4int count' in all ****Interpolation functions
          ii) added ' return (0.) ' to GenerateUserDefTheta and GenerateUserDefPhi 
              as default.
	  iii) changed
	       #include <iostream.h>
		 to #include "g4std/fstream"
	      in G4GeneralParicleSourceMessenger.cc

Nov 9 2000, M.Asai (tag event-V02-00-02)
- Adding /source/event/test and GeneralParticleSource sub-directory.

Oct 31 2000, F.Lei
  G4GeneralParticleSource:
  G4GeneralParticleSourceMessenger: 
 	G4GeneralParticleSource is an alternative primary source
	generator to G4ParticleGun. It has all the functions of 
	G4ParticleGun plus many options for specifing the primary 
	event particle and vertex.

 - added  -I$(G4BASE)/global/HEPNumerics/include \